Fix overflow

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -1,4 +1,4 @@
-.highlight pre {
+pre {
   overflow-x: auto;  /* 自动显示横向滚动条 */
   white-space: pre;  /* 保留所有空白符，禁止换行 */
   word-wrap: normal; /* 禁止长单词自动换行 */
